# pySWATPlus

./: .gitattributes  .gitignore  .readthedocs.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  basic_examples.ipynb  index.html  mkdocs.yml  objects.inv  old_README.md  pyproject.toml  requirements-docs.txt  requirements-mypy.txt  requirements.txt  setup.cfg  setup.py  test.ipynb
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-update-request.md  documentation_improvement.md  feature_request.md  submit_query.md
.github/workflows/: build-check.yml  building.yml  deploy-docs.yml  documenting.yml  linting.yml  publish.yml  releasing.yml  testing.yml  typing.yml
CONTRIBUTING/: index.html
api/calibration/: index.html
api/data_manager/: index.html
api/filereader/: index.html
api/performance_metrics/: index.html
api/scenario/: index.html
api/sensitivity_analyzer/: index.html
api/sensitivityanalyzer/: index.html
api/swatproblem/: index.html
api/swatproblemmultimodel/: index.html
api/txtinout_reader/: index.html
api/txtinoutreader/: index.html
api/types/: index.html
changelog/: index.html
citation/: index.html
docs/: CONTRIBUTING.md  changelog.md  citation.md  getting-started.md  index.md  introduction.md  requirements-docs.txt  run_swatplus.md  sensitivity.md
docs/api/: calibration.md  data_manager.md  filereader.md  performance_metrics.md  scenario.md  sensitivity_analyzer.md  sensitivityanalyzer.md  swatproblem.md  swatproblemmultimodel.md  txtinout_reader.md  txtinoutreader.md  types.md
docs/examples/: basic_examples.ipynb  calibration.ipynb  getting_started.ipynb  sensitivity_analysis.ipynb
docs/userguide/: advanced_calibration.md  advanced_sensitivity.md  data_analysis.md  model_calibration.md  read_output.md  sensitivity_analysis.md  sensitivity_interface.md  swatplus_simulation.md
examples/: basic_examples.ipynb  calibration.ipynb  sensitivity_analysis.ipynb
examples/basic_examples/: index.html
examples/calibration/: index.html
examples/getting_started/: index.html
examples/sensitivity_analysis/: index.html
getting-started/: index.html
introduction/: index.html
pySWATPlus/: FileReader.py  PymooBestSolution.py  SWATProblem.py  SWATProblemMultimodel.py  Scenario.py  TxtinoutReader.py  __init__.py  _version.py  base_sensitivity_analyser.py  cal_sensitivity_analyzer.py  calibration.py  calsensitivityanalyzer.py  cpu.py  data_manager.py  filereader.py  newtype.py  performance_metrics.py  requirements.txt  sensitivity_analyzer.py  sensitivityanalyzer.py  sensitivityanalyzercalibrationcal.py  txtinout_reader.py  txtinoutreader.py  types.py  utils.py  validators.py
run_swatplus/: index.html
sensitivity/: index.html
src/: FileReader.py  PymooBestSolution.py  SWATProblem.py  TxtinoutReader.py  __init__.py
tests/: test_calibration.py  test_calibration_cal.py  test_data_manager.py  test_filereader.py  test_newtype.py  test_performancemetrics.py  test_scenario.py  test_sensitivity_analyzer.py  test_sensitivityanalyzer.py  test_txtinout_reader.py  test_txtinoutreader.py  test_types.py  test_utils.py  test_validators.py
tests/TxtInOut/: __warnings.txt  a_observe_discharge_daily.csv  a_observe_discharge_monthly.csv  aqu_catunit.ele  aquifer.aqu  aquifer.con  area_calc.out  basin_carbon_all.txt  basin_totc.txt  bmpuser.str  cal_parms.cal  chandeg.con  channel-lte.cha  checker.out  chem_app.ops  cntable.lum  co2.out  codes.bsn  cons_practice.lum  diagnostics.out  erosion.out  fertilizer.frt  field.fld  file.cio  files_out.out  filterstrip.str  fire.ops  fort.7777  fort.7778  grassedww.str  graze.ops  harv.ops  hmd.cli  hru-data.hru  hru.con  hru_cbn_lyr.txt  hru_orgc.txt  hru_plc_stat.txt  hru_resc_stat.txt  hru_soilc_stat.txt  (+135 more)
tests/TxtInOut/SWIFT/: aqu_dr.swf  chan_dat.swf  chan_dr.swf  file_cio.swf  hru_dat.swf  hru_exco.swf  hru_wet.swf  precip.swf  res_dat.swf  res_dr.swf
tests/sample_data/: aquifer_yr.txt  error_sample.csv  hydrology.hyd  print.prt  time.sim
tests/sample_data/TxtInOut/: basin_carbon_all.txt  channel-lte.cha  cntable.lum  cons_practice.lum  field.fld  fire.ops  fort.7778  grassedww.str  hru-data.hru  hru_resc_stat.txt  hydrology.hyd  hydrology.wet  irr.ops  ls_unit.def  plants.plt  sediment.res  septic.str  soil_plant.ini  time.sim  topography.hyd  weather-sta.cli
tests/sample_data/no_exe/: error_file.csv
userguide/advanced_calibration/: index.html
userguide/advanced_sensitivity/: index.html
userguide/data_analysis/: index.html
userguide/model_calibration/: index.html
userguide/read_output/: index.html
userguide/sensitivity_analysis/: index.html
userguide/sensitivity_interface/: index.html
userguide/swatplus_simulation/: index.html
