[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pySWATPlus"
description = "Running and calibrating default or custom SWAT+ projects with Python"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0"}
authors = [
    { name = "Joan Saló", email = "joansalograu@gmail.com" }
]
keywords = [
    "SWAT+",
    "hydrology",
    "calibration",
    "watershed"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
dependencies = [
    "pandas",
    "pymoo",
    "tqdm",
    "dask",
    "dask-expr",
    "pyarrow"
]

[project.urls]
Homepage = "https://github.com/swat-model/pySWATPlus"
Repository = "https://github.com/swat-model/pySWATPlus"
Issues = "https://github.com/swat-model/pySWATPlus/issues"

[tool.setuptools]
packages = ["pySWATPlus"]


[tool.pytest.ini_options]
addopts = "-rA -Wignore::DeprecationWarning --cov=pySWATPlus --cov-report=html:cov_pySWATPlus --cov-report=term -s"
testpaths = [
    "tests"
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.mypy]
files = [
    "pySWATPlus"
]
ignore_missing_imports = true
strict = true