[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pySWATPlus"
description = "Running and calibrating default or custom SWAT+ projects with Python"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E.*"]
authors = [
    { name = "Joan Saló", email = "joansalograu@gmail.com" }
]
keywords = [
    "SWAT+",
    "simulation",
    "hydrology",
    "watershed"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: Hydrology"
]
dependencies = [
    "pandas",
    "typing-extensions"
]

[project.urls]
Homepage = "https://github.com/swat-model/pySWATPlus"
Documentation = "https://swat-model.github.io/pySWATPlus/"

[tool.setuptools]
packages = ["pySWATPlus"]


[tool.pytest.ini_options]
addopts = "-rA -Wignore::DeprecationWarning --cov=pySWATPlus --cov-report=html:cov_pySWATPlus --cov-report=term -s"
testpaths = [
    "tests"
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.mypy]
files = [
    "pySWATPlus"
]
ignore_missing_imports = true
strict = true