[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pySWATPlus"
description = "A Python interface for interacting with the SWAT+ hydrological model"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    {name = "Joan Saló", email = "joansalograu@gmail.com"},
    {name = "Debasish Pal", email = "bestdebasish@gmail.com"}
]
keywords = [
    "SWAT+",
    "simulation",
    "hydrology",
    "watershed"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: Hydrology"
]
dependencies = [
    "pydantic",
    "SALib",
    "pymoo"
]

[project.urls]
Homepage = "https://github.com/swat-model/pySWATPlus"
Documentation = "https://swat-model.github.io/pySWATPlus/"

[tool.setuptools]
packages = ["pySWATPlus"]


[tool.pytest.ini_options]
addopts = "-rA -Wignore::Warning --cov=pySWATPlus --cov-report=html:cov_pySWATPlus --cov-report=term -s"
testpaths = [
    "tests"
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.mypy]
files = [
    "pySWATPlus"
]
ignore_missing_imports = true
strict = true